<resources>
    <string name="app_name">popular-movies</string>
    <string name="popular_title" translatable="true">Popular Movies</string>
    <string name="top_rated_title" translatable="true">Top Rated Movies</string>
    <string name="favorite_title" translatable="true">Favorite Movies</string>

    <!-- Labels -->
    <string name="tv_label_title" translatable="true">Title</string>
    <string name="tv_label_release_date" translatable="true">Release Date</string>
    <string name="tv_label_rating" translatable="true">Rating</string>
    <string name="tv_label_summary" translatable="true">Summary</string>
    <string name="tv_label_trailers" translatable="true">Trailers</string>
    <string name="tv_label_reviews" translatable="true">Reviews</string>

    <!-- Default Values -->
    <string name="default_title">Best Moive Title Ever</string>

    <!-- Menu Values -->

    <!-- Intent Keys -->
    <string name="ik_movie_id" translatable="false">id</string>
    <string name="ik_movie_poster" translatable="false">poster</string>
    <string name="ik_movie_title" translatable="false">title</string>
    <string name="ik_movie_backdrop" translatable="false">backdrop</string>
    <string name="ik_movie_synopsis" translatable="false">synopsis</string>
    <string name="ik_user_rating" translatable="false">rating</string>
    <string name="ik_release_date" translatable="false">date</string>

    <!-- Bundle Keys -->
    <string name="bk_page_number" translatable="false">page</string>
    <string name="bk_request_type" translatable="false">type</string>
    <string name="bsik_popular" translatable="false">popular</string>
    <string name="bsik_top_rated" translatable="false">top rated</string>
    <string name="bsik_favorite" translatable="false">favorite</string>
    <string name="bsik_mode" translatable="false">mode</string>
    <string name="bk_movie_id" translatable="false">movie-id</string>
    <string name="bk_movie" translatable="false">movie</string>
    <string name="bk_reviews" translatable="false">reviews</string>
    <string name="bk_trailers" translatable="false">trailers</string>
    <string name="bk_db_task_action" translatable="false">action</string>

    <!-- Bundle Values -->
    <string name="bv_request_type_popular" translatable="false">popular</string>
    <string name="bv_request_type_top_rated" translatable="false">top rated</string>
    <string name="bv_request_type_favorite" translatable="false">favorite</string>
    <string name="bv_request_type_search" translatable="false">search</string>
    <string name="bv_request_type_trailers" translatable="false">trailers</string>
    <string name="bv_request_type_reviews" translatable="false">reviews</string>
    <string name="bv_db_task_action_query" translatable="false">query</string>
    <string name="bv_db_task_action_delete" translatable="false">delete</string>
    <string name="bv_db_task_action_insert" translatable="false">insert</string>

    <!-- Menu Item Values -->
    <string name="mi_sort_popular" translatable="true">Popular</string>
    <string name="mi_sort_top_rated" translatable="true">Top Rated</string>
    <string name="mi_favorite" translatable="true">Favorite</string>
    <string name="mi_unfavorite" translatable="true">UnFavorite</string>

    <!-- Content Descriptions -->
    <string name="description_background_image" translatable="true">Moive image as backdrop.</string>
    <string name="description_poster_image" translatable="true">Moive poster image as a selectable tile for the user.</string>

</resources>
