<?xml version="1.0" encoding="utf-8"?>
<layout>
    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tool="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_movie_poster_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_poster_image"
            android:padding="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tool:src="@drawable/ic_android_black_24dp" />

        <TextView
            android:id="@+id/tv_label_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="4dp"
            android:text="@string/tv_label_title"
            app:layout_constraintTop_toTopOf="@id/iv_movie_poster_detail"
            app:layout_constraintLeft_toRightOf="@id/iv_movie_poster_detail"/>

        <TextView
            android:id="@+id/tv_movie_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingLeft="4dp"
            app:layout_constraintTop_toBottomOf="@id/tv_label_title"
            app:layout_constraintLeft_toRightOf="@id/iv_movie_poster_detail"
            tool:text="Movie Title"/>

        <TextView
            android:id="@+id/tv_label_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingLeft="4dp"
            android:text="@string/tv_label_release_date"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_detail_title"
            app:layout_constraintLeft_toRightOf="@id/iv_movie_poster_detail"/>

        <TextView
            android:id="@+id/tv_movie_detail_release_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingLeft="4dp"
            app:layout_constraintTop_toBottomOf="@id/tv_label_release_date"
            app:layout_constraintLeft_toRightOf="@id/iv_movie_poster_detail"
            tool:text="Release Date"/>

        <TextView
            android:id="@+id/tv_label_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingLeft="4dp"
            android:text="@string/tv_label_rating"
            app:layout_constraintTop_toBottomOf="@id/tv_movie_detail_release_date"
            app:layout_constraintLeft_toRightOf="@id/iv_movie_poster_detail"/>

        <TextView
            android:id="@+id/tv_movie_detail_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingLeft="4dp"
            app:layout_constraintTop_toBottomOf="@id/tv_label_rating"
            app:layout_constraintLeft_toRightOf="@id/iv_movie_poster_detail"
            tool:text="4.6"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_movie_detail_trailers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/iv_movie_poster_detail"
            app:layout_constraintLeft_toLeftOf="@id/iv_movie_poster_detail">

        </android.support.v7.widget.RecyclerView>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_movie_detail_reviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/rv_movie_detail_trailers"
            app:layout_constraintLeft_toLeftOf="@id/rv_movie_detail_trailers">

        </android.support.v7.widget.RecyclerView>

        <TextView
            android:id="@+id/tv_label_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingLeft="4dp"
            android:text="@string/tv_label_summary"
            app:layout_constraintTop_toBottomOf="@+id/rv_movie_detail_reviews"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <ScrollView
            android:id="@+id/sv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="4dp"
            app:layout_constraintTop_toBottomOf="@id/tv_label_summary"
            app:layout_constraintLeft_toLeftOf="@id/tv_label_summary">

            <TextView
                android:id="@+id/tv_movie_description"
                android:fontFamily="serif-monospace"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tool:text="This is testing description."/>

        </ScrollView>
    </android.support.constraint.ConstraintLayout>
</layout>